# GenericProtobufDatabase

./: .clang-format  CMakeLists.txt  conanfile.txt  desc.proto  example.cpp  protobufDynMsg.cpp  rocksdbTester.cpp
.github/workflows/: ubuntu.yml  windows.yml
cmake/: testUtilsConfig.cmake
